environment/mydiycc/my007/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> teigi
Rule 1     teigi -> kansuuteigi
Rule 2     kansuuteigi -> SYMBOL SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE
Rule 3     bunlist -> RETURN expression SEMI
Rule 4     expression -> NUMBER
Rule 5     expression -> expression OPTASU expression
Rule 6     expression -> expression OPHIKU expression
Rule 7     expression -> expression OPKAKE expression

Terminals, with rules where they appear

KAKKO                : 2
KOKKA                : 2
LBRACE               : 2
NUMBER               : 4
OPHIKU               : 6
OPKAKE               : 7
OPTASU               : 5
RBRACE               : 2
RETURN               : 3
SEMI                 : 3
SYMBOL               : 2 2
error                : 

Nonterminals, with rules where they appear

bunlist              : 2
expression           : 3 5 5 6 6 7 7
kansuuteigi          : 1
teigi                : 0

Parsing method: LALR

state 0

    (0) S' -> . teigi
    (1) teigi -> . kansuuteigi
    (2) kansuuteigi -> . SYMBOL SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE

    SYMBOL          shift and go to state 3

    teigi                          shift and go to state 1
    kansuuteigi                    shift and go to state 2

state 1

    (0) S' -> teigi .



state 2

    (1) teigi -> kansuuteigi .

    $end            reduce using rule 1 (teigi -> kansuuteigi .)


state 3

    (2) kansuuteigi -> SYMBOL . SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE

    SYMBOL          shift and go to state 4


state 4

    (2) kansuuteigi -> SYMBOL SYMBOL . KAKKO KOKKA LBRACE bunlist RBRACE

    KAKKO           shift and go to state 5


state 5

    (2) kansuuteigi -> SYMBOL SYMBOL KAKKO . KOKKA LBRACE bunlist RBRACE

    KOKKA           shift and go to state 6


state 6

    (2) kansuuteigi -> SYMBOL SYMBOL KAKKO KOKKA . LBRACE bunlist RBRACE

    LBRACE          shift and go to state 7


state 7

    (2) kansuuteigi -> SYMBOL SYMBOL KAKKO KOKKA LBRACE . bunlist RBRACE
    (3) bunlist -> . RETURN expression SEMI

    RETURN          shift and go to state 9

    bunlist                        shift and go to state 8

state 8

    (2) kansuuteigi -> SYMBOL SYMBOL KAKKO KOKKA LBRACE bunlist . RBRACE

    RBRACE          shift and go to state 10


state 9

    (3) bunlist -> RETURN . expression SEMI
    (4) expression -> . NUMBER
    (5) expression -> . expression OPTASU expression
    (6) expression -> . expression OPHIKU expression
    (7) expression -> . expression OPKAKE expression

    NUMBER          shift and go to state 12

    expression                     shift and go to state 11

state 10

    (2) kansuuteigi -> SYMBOL SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE .

    $end            reduce using rule 2 (kansuuteigi -> SYMBOL SYMBOL KAKKO KOKKA LBRACE bunlist RBRACE .)


state 11

    (3) bunlist -> RETURN expression . SEMI
    (5) expression -> expression . OPTASU expression
    (6) expression -> expression . OPHIKU expression
    (7) expression -> expression . OPKAKE expression

    SEMI            shift and go to state 13
    OPTASU          shift and go to state 14
    OPHIKU          shift and go to state 15
    OPKAKE          shift and go to state 16


state 12

    (4) expression -> NUMBER .

    SEMI            reduce using rule 4 (expression -> NUMBER .)
    OPTASU          reduce using rule 4 (expression -> NUMBER .)
    OPHIKU          reduce using rule 4 (expression -> NUMBER .)
    OPKAKE          reduce using rule 4 (expression -> NUMBER .)


state 13

    (3) bunlist -> RETURN expression SEMI .

    RBRACE          reduce using rule 3 (bunlist -> RETURN expression SEMI .)


state 14

    (5) expression -> expression OPTASU . expression
    (4) expression -> . NUMBER
    (5) expression -> . expression OPTASU expression
    (6) expression -> . expression OPHIKU expression
    (7) expression -> . expression OPKAKE expression

    NUMBER          shift and go to state 12

    expression                     shift and go to state 17

state 15

    (6) expression -> expression OPHIKU . expression
    (4) expression -> . NUMBER
    (5) expression -> . expression OPTASU expression
    (6) expression -> . expression OPHIKU expression
    (7) expression -> . expression OPKAKE expression

    NUMBER          shift and go to state 12

    expression                     shift and go to state 18

state 16

    (7) expression -> expression OPKAKE . expression
    (4) expression -> . NUMBER
    (5) expression -> . expression OPTASU expression
    (6) expression -> . expression OPHIKU expression
    (7) expression -> . expression OPKAKE expression

    NUMBER          shift and go to state 12

    expression                     shift and go to state 19

state 17

    (5) expression -> expression OPTASU expression .
    (5) expression -> expression . OPTASU expression
    (6) expression -> expression . OPHIKU expression
    (7) expression -> expression . OPKAKE expression

    SEMI            reduce using rule 5 (expression -> expression OPTASU expression .)
    OPTASU          reduce using rule 5 (expression -> expression OPTASU expression .)
    OPHIKU          reduce using rule 5 (expression -> expression OPTASU expression .)
    OPKAKE          shift and go to state 16

  ! OPKAKE          [ reduce using rule 5 (expression -> expression OPTASU expression .) ]
  ! OPTASU          [ shift and go to state 14 ]
  ! OPHIKU          [ shift and go to state 15 ]


state 18

    (6) expression -> expression OPHIKU expression .
    (5) expression -> expression . OPTASU expression
    (6) expression -> expression . OPHIKU expression
    (7) expression -> expression . OPKAKE expression

    SEMI            reduce using rule 6 (expression -> expression OPHIKU expression .)
    OPTASU          reduce using rule 6 (expression -> expression OPHIKU expression .)
    OPHIKU          reduce using rule 6 (expression -> expression OPHIKU expression .)
    OPKAKE          shift and go to state 16

  ! OPKAKE          [ reduce using rule 6 (expression -> expression OPHIKU expression .) ]
  ! OPTASU          [ shift and go to state 14 ]
  ! OPHIKU          [ shift and go to state 15 ]


state 19

    (7) expression -> expression OPKAKE expression .
    (5) expression -> expression . OPTASU expression
    (6) expression -> expression . OPHIKU expression
    (7) expression -> expression . OPKAKE expression

    SEMI            reduce using rule 7 (expression -> expression OPKAKE expression .)
    OPTASU          reduce using rule 7 (expression -> expression OPKAKE expression .)
    OPHIKU          reduce using rule 7 (expression -> expression OPKAKE expression .)
    OPKAKE          reduce using rule 7 (expression -> expression OPKAKE expression .)

  ! OPTASU          [ shift and go to state 14 ]
  ! OPHIKU          [ shift and go to state 15 ]
  ! OPKAKE          [ shift and go to state 16 ]

